<resources>
    <string name="app_name">Login</string>
    <string name="txNombre">Usuario</string>
    <string name="txPass">Contraseña</string>
    <string name="btIntro">Entrar</string>
    <string name="CPiloto">EMPLEADOS</string>
    <string name="CVehiculo">VEHICULOS</string>
    <string name="CCliente">CLIENTES</string>
    <string name="CEnvio">ENVIOS</string>
    <string name="CEstad">ESTADISTICA</string>
    <string name="CMaps">MAPS</string>
    <string name="btRecPass">Olvide mi Contraseña</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nuevo_empleado">Nuevo Empleado</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="telefono">Telefono</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="guardar">GUARDAR</string>
    <string name="nuevo_auto">Nuevo Auto</string>
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string name="color">Color</string>
    <string name="nuevo_cliente">Nuevo Cliente</string>
    <string name="direccion">Direccion</string>
    <string name="horario">Horario</string>
    <string name="lista_de_clientes">Lista de Clientes</string>
    <string name="lista_de_automoviles">Lista de Automoviles</string>
    <string name="lista_de_empleados">Lista de Empleados</string>
    <string name="nueva_entrega">Nueva Entrega</string>
    <string name="modificar">Modificar</string>
</resources>