<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewEmp_Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/nuevo_empleado"
        android:textSize="35sp">

    </TextView>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layNombre"
        android:hint="@string/nombre_completo">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNombreEmpleado"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="25sp"
            android:paddingTop="15dp">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layTelefono"
        android:hint="@string/telefono">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNumTel"
            android:ems="10"
            android:inputType="number"
            android:textSize="25sp"
            android:paddingTop="15dp">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layCorreo"
        android:hint="@string/correo_electronico">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtCorreo"
            android:ems="10"
            android:inputType="text"
            android:textSize="25sp"
            android:paddingTop="15dp">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layContraseña"
        android:hint="@string/contrase_a">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPass"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:paddingTop="15dp">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/guardar"
        android:layout_gravity="center"
        android:onClick="SaveAuto"
        android:textSize="25sp"
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/GuardarEmpleado">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>